fix horizontal scroll

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,6 +6,10 @@
   @return $unit-value-desktop * $number;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 ul {
   margin: 0;
   padding: 0;
